fix overflow issue on about page

--- a/workspace/littlelemon/restaurant/static/css/style.css
+++ b/workspace/littlelemon/restaurant/static/css/style.css
@@ -43,7 +43,7 @@ p, ul{
     clip-path: inset(0 0 30% 0);
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 99vw;
     height: auto;
     padding: none;
     margin: none;
